# git-remote-rclone

./: .gitignore  LICENSE  Makefile  README.md  git-remote-rclone  setup.cfg  setup.py
