[metadata]
url = https://github.com/datalad/git-remote-rclone
version = 0.1
author = Michael Hanke
author_email =  michael.hanke@gmail.com
maintainer = Michael Hanke
maintainer_email =  michael.hanke@gmail.com
description = Git remote helper for rclone-supported services
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.5
scripts =
  git-remote-rclone
